juego a falta de angulo

--- a/index.html
+++ b/index.html
@@ -63,16 +63,15 @@
         </div>
       </div>
 
-      <div id="angulo" class="d-flex align-items-center mt-3 flex-column"></div>
+      <div id="angulo" class="d-flex align-items-center mt-3 flex-column">
+        
+      </div>
       <div id="adivinar" class="d-flex justify-content-center mt-3">
-        <input type="number" name="anguloadivinar" id="anguloadivinar" class="m-2" />
-        <button id="enviar">Adivinar!</button>
+        <input  type="number" name="anguloadivinar" id="anguloadivinar" class="m-2" />
+        <button id="enviar" class="btn btn-outline-dark">Adivinar!</button>
       </div>
       <div class="d-flex justify-content-center">
-        <p id="resultado"></p>
-      </div>
-      <div class="d-flex justify-content-center">
-        <p>Intentos Restantes: <span id="intentos">4</span></p>
+        <p class="h5 mt-3">Intentos Restantes: <span id="intentos">4</span></p>
       </div>
     </div>
 
